fix overflow in mobile devices

--- a/src/container/work/Work.css
+++ b/src/container/work/Work.css
@@ -13,7 +13,6 @@
   margin-top: 5rem;
   display: flex;
   justify-content: space-around;
-  width: 30%;
   align-items: center;
   margin: 3rem auto;
 }
